[package]
name = "websocket-data-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
futures-channel = "0.3"
futures-util = "0.3"
url = "2.2"

[dependencies.tungstenite]
version = "0.16"

[[bin]]
name = "test_server"
path = "src/test_server.rs"

[[bin]]
name = "test_client"
path = "src/test_client.rs"
